              large for unsigned integer.  Always broken (Pamstack was new in
              Netpbm 10.0 (June 2002).

              ppmfade: fix "file not found" crash for most fade modes.
              Introduced in Netpbm 10.98 (March 2022).

              ppmfade: fix incorrect block mode fade.  Always broken
              (ppmfade was new in Netpbm 8.4 (April 2000)).

              Build: Include LDFLAGS in link of shared library.

23.06.28 BJH  Release 11.03.00

              pamstack: Add -firstmaxval, -lcmmaxval

              pnmcolormap: make result independent of how system's qsort
              orders records with equal keys.  Affects pnmquant.

              pamtopng: fix typo in error message about -chroma option.

              pamtopng, pnmtopng, pngtopam: fix error message when something
              fails in libpng.  Always broken (the programs were new in Netpbm
              8.1 (March 2000)).

23.03.25 BJH  Release 11.02.00

              jpegtopnm: Add -traceexif

              pbmtextps: Add -asciihex, -ascii85.

              pcdovtoppm: remove dependency on obsolete 'tempfile' program.

              jpegtopnm: Many fixes to -dumpexif.  Always broken.
              (-dumpexif was new in Netpbm 9.18 (September 2001))

              pamtopng: fix -chroma option: always rejected.  Always broken.
              (pamtopng was new in Netpbm 10.70 (June 2015)).

              pnmtopng: fix -rgb option: always rejected.  Always broken
              (-rgb was new in Netpbm 10.30 (October 2005)).

              build: change the way you add the separately distributed
              'hpcdtoppm' code to the build.

22.12.31 BJH  Release 11.01.00

              pamcat: Add -listfile .

              pamtojpeg2k: add -size option.  Doesn't precisely work (and
              -compression has never worked precisely either); should be
              fixed some day.

              ppmtompeg: Fix crash with resize option because of invalid